--- a/paper/sample-papers/sections/04-01-balance.tex
+++ b/paper/sample-papers/sections/04-01-balance.tex
@@ -64,20 +64,20 @@
              && \multicolumn{3}{c|}{$\epsilon=0.01$} & \multicolumn{3}{c|}{$\epsilon=0.05$} & \multicolumn{3}{c|}{$\epsilon=0.1$} & \multicolumn{3}{c|}{$\epsilon=0.15$} & \multicolumn{3}{c}{$\epsilon=0.2$} \\
 \hline
 \hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            & $-$        & $-$*       &            & $-$        & $-$*       &            & $-$        & $-$        &            & $+$        & $-$        &            & $-$        & $-$         \\
-&ip\_m        & $+$        &            & $-$*       & $+$        &            & $-$*       & $+$        &            & $-$        & $-$        &            & $-$        & $+$        &            & $-$         \\
+\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            &            & $-$*       &            & $-$        & $-$*       &            & $-$        & $-$        &            & $-$        & $-$        &            &            & $-$         \\
+&ip\_m        &            &            & $-$*       & $+$        &            & $-$*       & $+$        &            & $-$        & $+$        &            & $-$        &            &            & $-$         \\
 &m            & $+$*       & $+$*       &            & $+$*       & $+$*       &            & $+$        & $+$        &            & $+$        & $+$        &            & $+$        & $+$        &             \\
 \hline
 \multicolumn{2}{l|}{\textbf{SVM}} & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
 \hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            & $-$        & $+$        &            & $-$        & $-$        &            & $-$        & $+$        &            & $-$        & $+$        &            & $+$        & $+$         \\
-&ip\_m        & $+$        &            & $+$        & $+$        &            & $+$        & $+$        &            & $+$        & $+$        &            & $+$        & $-$        &            & $+$         \\
-&m            & $-$        & $-$        &            & $+$        & $-$        &            & $-$        & $-$        &            & $-$        & $-$        &            & $-$        & $-$        &             \\
+\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            &            & $+$*       &            & $-$        & $-$        &            & $-$        & $+$        &            & $-$        & $+$        &            &            & $+$         \\
+&ip\_m        &            &            & $+$*       & $+$        &            & $+$        & $+$        &            & $+$        & $+$        &            & $+$        &            &            & $+$         \\
+&m            & $-$*       & $-$*       &            & $+$        & $-$        &            & $-$        & $-$        &            & $-$        & $-$        &            & $-$        & $-$        &             \\
 \hline
 \hline
 \multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            &            & $-$        &            & $-$        & $-$*       &            & $-$        & $-$*       &            & $-$        & $-$*       &            & $-$        & $-$*        \\
-&ip\_m        &            &            & $-$        & $+$        &            & $-$*       & $+$        &            & $-$*       & $+$        &            & $-$*       & $+$        &            & $-$*        \\
-&m            & $+$        & $+$        &            & $+$*       & $+$*       &            & $+$*       & $+$*       &            & $+$*       & $+$*       &            & $+$*       & $+$*       &             \\
+&ip\_m        &            &            & $-$        & $+$        &            & $-$*       & $+$        &            & $-$*       & $+$        &            & $-$*       & $+$        &            & $-$         \\
+&m            & $+$        & $+$        &            & $+$*       & $+$*       &            & $+$*       & $+$*       &            & $+$*       & $+$*       &            & $+$*       & $+$        &             \\
 \hline
 \multicolumn{2}{l|}{\textbf{DT}}  & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
 \hline
@@ -119,26 +119,26 @@
 &m            & $+$*       & $+$*       &            & $+$*       & $+$*       &            & $+$        & $+$        &            & $-$        & $-$        &            & $-$        & $-$        &             \\
 \hline
 \hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            & $-$        & $-$*       &            & $-$        & $-$        &            & $-$        & $-$        &            & $+$        & $-$        &            & $-$        & $+$         \\
-&ip\_m        & $+$        &            & $-$*       & $+$        &            & $-$        & $+$        &            & $-$        & $-$        &            & $-$        & $+$        &            & $+$         \\
-&m            & $+$*       & $+$*       &            & $+$        & $+$        &            & $+$        & $+$        &            & $+$        & $+$        &            & $-$        & $-$        &             \\
+\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            &            & $-$*       &            & $-$        & $-$        &            & $-$        & $-$        &            &            & $-$        &            &            & $-$         \\
+&ip\_m        &            &            & $-$*       & $+$        &            & $-$        & $+$        &            & $-$        &            &            & $-$        &            &            & $-$         \\
+&m            & $+$*       & $+$*       &            & $+$        & $+$        &            & $+$        & $+$        &            & $+$        & $+$        &            & $+$        & $+$        &             \\
 \hline
 \multicolumn{2}{l|}{\textbf{MPR}} & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
 \hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            & $-$        & $-$*       &            & $-$        & $-$        &            & $-$        & $-$        &            & $-$        & $+$        &            & $+$        & $-$         \\
-&ip\_m        & $+$        &            & $-$*       & $+$        &            & $-$        & $+$        &            & $-$        & $+$        &            & $+$        & $-$        &            & $-$         \\
-&m            & $+$*       & $+$*       &            & $+$        & $+$        &            & $+$        & $+$        &            & $-$        & $-$        &            & $+$        & $+$        &             \\
+\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            &            & $-$*       &            & $-$        & $-$        &            & $-$        & $-$        &            &            & $+$        &            &            & $+$         \\
+&ip\_m        &            &            & $-$*       & $+$        &            & $-$        & $+$        &            & $-$        &            &            & $+$        &            &            & $+$         \\
+&m            & $+$*       & $+$*       &            & $+$        & $+$        &            & $+$        & $+$        &            & $-$        & $-$        &            & $-$        & $-$        &             \\
 \hline
 \hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            & $+$        & $-$*       &            & $-$*       & $-$*       &            & $-$        & $-$        &            & $-$        & $-$        &            & $+$        & $-$         \\
-&ip\_m        & $-$        &            & $-$*       & $+$*       &            & $-$*       & $+$        &            & $+$        & $+$        &            & $-$        & $-$        &            & $-$         \\
-&m            & $+$*       & $+$*       &            & $+$*       & $+$*       &            & $+$        & $-$        &            & $+$        & $+$        &            & $+$        & $+$        &             \\
+\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            &            & $-$*       &            & $-$*       & $-$*       &            & $-$        & $-$        &            & $-$        & $-$        &            & $-$        & $-$         \\
+&ip\_m        &            &            & $-$*       & $+$*       &            & $-$*       & $+$        &            & $-$        & $+$        &            & $-$        & $+$        &            & $-$         \\
+&m            & $+$*       & $+$*       &            & $+$*       & $+$*       &            & $+$        & $+$        &            & $+$        & $+$        &            & $+$        & $+$        &             \\
 \hline
 \multicolumn{2}{l|}{\textbf{RF}}  & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
 \hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            & $+$        & $-$*       &            & $-$*       & $-$*       &            & $-$        & $-$        &            & $-$        & $-$        &            & $-$        & $-$         \\
-&ip\_m        & $-$        &            & $-$*       & $+$*       &            & $-$*       & $+$        &            & $+$        & $+$        &            & $+$        & $+$        &            & $-$         \\
-&m            & $+$*       & $+$*       &            & $+$*       & $+$*       &            & $+$        & $-$        &            & $+$        & $-$        &            & $+$        & $+$        &             \\
+\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            &            & $-$*       &            & $-$*       & $-$*       &            & $-$        & $-$        &            & $-$        & $-$        &            & $-$        & $-$         \\
+&ip\_m        &            &            & $-$*       & $+$*       &            & $-$        & $+$        &            & $+$        & $+$        &            & $+$        & $+$        &            & $-$         \\
+&m            & $+$*       & $+$*       &            & $+$*       & $+$        &            & $+$        & $-$        &            & $+$        & $-$        &            & $+$        & $+$        &             \\
 \hline
 \hline
 \multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            &            & $-$*       &            & $-$        & $-$        &            & $-$        & $+$        &            &            & $+$        &            &            & $-$         \\
