--- a/paper/sample-papers/sections/04-04-iris.tex
+++ b/paper/sample-papers/sections/04-04-iris.tex
@@ -55,67 +55,99 @@
  % The caption goes in the second argument, and the table contents
  % go in the third argument.
 \floatconts
-  {tab:balance-results}%
-  {\caption{glass dataset}}%
+  {tab:iris-results}%
+  {\caption{iris dataset}}%
   {
-\begin{tabular}{l|lll|lll|lll|lll|lll}
-             & \multicolumn{3}{c|}{$\epsilon=0.01$} & \multicolumn{3}{c|}{$\epsilon=0.05$} & \multicolumn{3}{c|}{$\epsilon=0.1$} & \multicolumn{3}{c|}{$\epsilon=0.15$} & \multicolumn{3}{c}{$\epsilon=0.2$} \\
+\begin{tabular}{cl|lll|lll|lll|lll|lll}
+             && \multicolumn{3}{c|}{$\epsilon=0.01$} & \multicolumn{3}{c|}{$\epsilon=0.05$} & \multicolumn{3}{c|}{$\epsilon=0.1$} & \multicolumn{3}{c|}{$\epsilon=0.15$} & \multicolumn{3}{c}{$\epsilon=0.2$} \\
 \hline
 \hline
-
+\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            &            &            &            &            & $-$        &            &            & $+$        &            &            & $+$        &            &            & $+$         \\
+&ip\_m        &            &            &            &            &            & $-$        &            &            & $+$        &            &            & $+$        &            &            & $+$         \\
+&m            &            &            &            & $+$        & $+$        &            & $-$        & $-$        &            & $-$        & $-$        &            & $-$        & $-$        &             \\
 \hline
-\textbf{SVM} & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
+\multicolumn{2}{l|}{\textbf{SVM}} & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
 \hline
-
-\hline
-\hline
-
-\hline
-\textbf{DT}  & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
-\hline
-
+\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            &            &            &            &            & $+$        &            &            & $-$        &            &            & $-$        &            &            & $-$         \\
+&ip\_m        &            &            &            &            &            & $+$        &            &            & $-$        &            &            & $-$        &            &            & $-$         \\
+&m            &            &            &            & $-$        & $-$        &            & $+$        & $+$        &            & $+$        & $+$        &            & $+$        & $+$        &             \\
 \hline
 \hline
-
+\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            &            &            &            &            & $+$        &            & $-$        & $-$        &            &            & $+$        &            &            & $+$         \\
+&ip\_m        &            &            &            &            &            & $+$        & $+$        &            & $-$        &            &            & $+$        &            &            & $+$         \\
+&m            &            &            &            & $-$        & $-$        &            & $+$        & $+$        &            & $-$        & $-$        &            & $-$        & $-$        &             \\
 \hline
-\textbf{KNN} & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
+\multicolumn{2}{l|}{\textbf{DT}}  & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
 \hline
-
-\hline
-\hline
-
-\hline
-\textbf{Ada} & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
-\hline
-
+\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            &            &            &            &            & $+$        &            & $-$        & $-$        &            &            & $-$        &            &            & $-$         \\
+&ip\_m        &            &            &            &            &            & $+$        & $+$        &            & $-$        &            &            & $-$        &            &            & $-$         \\
+&m            &            &            &            & $-$        & $-$        &            & $+$        & $+$        &            & $+$        & $+$        &            & $+$        & $+$        &             \\
 \hline
 \hline
-
+\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
+&ip\_m        &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
+&m            &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
 \hline
-\textbf{GNB} & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
+\multicolumn{2}{l|}{\textbf{KNN}} & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
 \hline
-
-\hline
-\hline
-
-\hline
-\textbf{MPR} & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
-\hline
-
+\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
+&ip\_m        &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
+&m            &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
 \hline
 \hline
-
+\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
+&ip\_m        &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
+&m            &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
 \hline
-\textbf{RF}  & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
+\multicolumn{2}{l|}{\textbf{Ada}} & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
 \hline
-
+\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            &            &            &            &            & $+$        &            &            & $+$        &            &            &            &            &            &             \\
+&ip\_m        &            &            &            &            &            & $+$        &            &            & $+$        &            &            &            &            &            &             \\
+&m            &            &            &            & $-$        & $-$        &            & $-$        & $-$        &            &            &            &            &            &            &             \\
 \hline
 \hline
-
+\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
+&ip\_m        &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
+&m            &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
 \hline
-\textbf{QDA} & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
+\multicolumn{2}{l|}{\textbf{GNB}} & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
 \hline
-
+\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            &            &            &            &            & $+$        &            &            & $+$        &            &            & $+$        &            &            &             \\
+&ip\_m        &            &            &            &            &            & $+$        &            &            & $+$        &            &            & $+$        &            &            &             \\
+&m            &            &            &            & $-$        & $-$        &            & $-$        & $-$        &            & $-$        & $-$        &            &            &            &             \\
+\hline
+\hline
+\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            &            &            &            &            & $+$        &            &            & $+$        &            &            & $+$        &            &            & $+$         \\
+&ip\_m        &            &            &            &            &            & $+$        &            &            & $+$        &            &            & $+$        &            &            & $+$         \\
+&m            &            &            &            & $-$        & $-$        &            & $-$        & $-$        &            & $-$        & $-$        &            & $-$        & $-$        &             \\
+\hline
+\multicolumn{2}{l|}{\textbf{MPR}} & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
+\hline
+\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            &            &            &            &            & $+$        &            &            & $-$        &            &            & $-$        &            &            & $-$         \\
+&ip\_m        &            &            &            &            &            & $+$        &            &            & $-$        &            &            & $-$        &            &            & $-$         \\
+&m            &            &            &            & $-$        & $-$        &            & $+$        & $+$        &            & $+$        & $+$        &            & $+$        & $+$        &             \\
+\hline
+\hline
+\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            &            &            &            &            & $-$        &            & $-$        & $-$        &            &            & $-$        &            &            & $-$         \\
+&ip\_m        &            &            &            &            &            & $-$        & $+$        &            & $-$        &            &            & $-$        &            &            & $-$         \\
+&m            &            &            &            & $+$        & $+$        &            & $+$        & $+$        &            & $+$        & $+$        &            & $+$        & $+$        &             \\
+\hline
+\multicolumn{2}{l|}{\textbf{RF}}  & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
+\hline
+\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            &            &            &            &            & $-$        &            & $-$        & $-$        &            &            & $+$        &            &            & $+$         \\
+&ip\_m        &            &            &            &            &            & $-$        & $+$        &            & $+$        &            &            & $+$        &            &            & $+$         \\
+&m            &            &            &            & $+$        & $+$        &            & $+$        & $-$        &            & $-$        & $-$        &            & $-$        & $-$        &             \\
+\hline
+\hline
+\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
+&ip\_m        &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
+&m            &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
+\hline
+\multicolumn{2}{l|}{\textbf{QDA}} & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
+\hline
+\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            &            &            &            &            & $+$        &            &            & $+$        &            &            &            &            &            &             \\
+&ip\_m        &            &            &            &            &            & $+$        &            &            & $+$        &            &            &            &            &            &             \\
+&m            &            &            &            & $-$        & $-$        &            & $-$        & $-$        &            &            &            &            &            &            &             \\
 \hline
 \hline
 \end{tabular}
