--- a/paper/sample-papers/sections/04-07-wineR.tex
+++ b/paper/sample-papers/sections/04-07-wineR.tex
@@ -57,7 +57,7 @@
  % The caption goes in the second argument, and the table contents
  % go in the third argument.
 \floatconts
-  {tab:balance-results}%
+  {tab:wineRed-results}%
   {\caption{wineRed dataset}}%
   {
 \begin{tabular}{cl|lll|lll|lll|lll|lll}
@@ -75,14 +75,14 @@
 &m            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &             \\
 \hline
 \hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            & $-$        & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$        & $-$*       &            & $+$        & $-$*        \\
-&ip\_m        & $+$        &            & $-$        & $+$*       &            & $-$*       & $+$*       &            & $-$*       & $+$        &            & $-$*       & $-$        &            & $-$*        \\
+\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            & $-$        & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$        & $-$*       &            & $-$        & $-$*        \\
+&ip\_m        & $+$        &            & $-$        & $+$*       &            & $-$*       & $+$*       &            & $-$*       & $+$        &            & $-$*       & $+$        &            & $-$*        \\
 &m            & $+$*       & $+$        &            & $+$*       & $+$*       &            & $+$*       & $+$*       &            & $+$*       & $+$*       &            & $+$*       & $+$*       &             \\
 \hline
 \multicolumn{2}{l|}{\textbf{DT}}  & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
 \hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            & $-$        & $-$        &            & $-$        & $-$        &            & $-$        & $+$*       &            & $-$        & $+$*       &            & $+$        & $+$*        \\
-&ip\_m        & $+$        &            & $-$        & $+$        &            & $-$        & $+$        &            & $+$*       & $+$        &            & $+$*       & $-$        &            & $+$*        \\
+\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            & $-$        & $-$        &            & $-$        & $-$        &            & $-$        & $+$*       &            & $-$        & $+$*       &            & $-$        & $+$*        \\
+&ip\_m        & $+$        &            & $-$        & $+$        &            & $-$        & $+$        &            & $+$*       & $+$        &            & $+$*       & $+$        &            & $+$*        \\
 &m            & $+$        & $+$        &            & $+$        & $+$        &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &             \\
 \hline
 \hline
@@ -117,6 +117,7 @@
 \multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            & $-$        & $+$        &            & $-$        & $+$*       &            & $-$        & $+$*       &            & $-$        & $+$*       &            & $-$        & $+$*        \\
 &ip\_m        & $+$        &            & $+$        & $+$        &            & $+$*       & $+$        &            & $+$*       & $+$        &            & $+$*       & $+$        &            & $+$*        \\
 &m            & $-$        & $-$        &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &             \\
+
 \hline
 \hline
 \multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$        & $-$         \\
@@ -125,14 +126,14 @@
 \hline
 \multicolumn{2}{l|}{\textbf{MPR}} & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
 \hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            & $-$        & $+$*       &            & $-$        & $+$*       &            & $-$*       & $+$*       &            & $-$        & $+$*       &            & $-$        & $+$*        \\
-&ip\_m        & $+$        &            & $+$*       & $+$        &            & $+$*       & $+$*       &            & $+$*       & $+$        &            & $+$*       & $+$        &            & $+$*        \\
+\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            & $-$        & $+$*       &            & $-$        & $+$*       &            & $-$        & $+$*       &            & $-$*       & $+$*       &            & $-$        & $+$*        \\
+&ip\_m        & $+$        &            & $+$*       & $+$        &            & $+$*       & $+$        &            & $+$*       & $+$*       &            & $+$*       & $+$        &            & $+$*        \\
 &m            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &             \\
 \hline
 \hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*        \\
+\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$         \\
 &ip\_m        & $+$*       &            & $-$*       & $+$*       &            & $-$*       & $+$*       &            & $-$*       & $+$*       &            & $-$        & $+$*       &            & $+$         \\
-&m            & $+$*       & $+$*       &            & $+$*       & $+$*       &            & $+$*       & $+$*       &            & $+$*       & $+$        &            & $+$*       & $-$        &             \\
+&m            & $+$*       & $+$*       &            & $+$*       & $+$*       &            & $+$*       & $+$*       &            & $+$*       & $+$        &            & $+$        & $-$        &             \\
 \hline
 \multicolumn{2}{l|}{\textbf{RF}}  & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
 \hline
