--- a/paper/sample-papers/sections/04-09-yeast.tex
+++ b/paper/sample-papers/sections/04-09-yeast.tex
@@ -57,22 +57,22 @@
  % The caption goes in the second argument, and the table contents
  % go in the third argument.
 \floatconts
-  {tab:balance-results}%
+  {tab:yeast-results}%
   {\caption{yeast dataset}}%
   {
 \begin{tabular}{cl|lll|lll|lll|lll|lll}
-             & & \multicolumn{3}{c|}{$\epsilon=0.01$} & \multicolumn{3}{c|}{$\epsilon=0.05$} & \multicolumn{3}{c|}{$\epsilon=0.1$} & \multicolumn{3}{c|}{$\epsilon=0.15$} & \multicolumn{3}{c}{$\epsilon=0.2$} \\
+             && \multicolumn{3}{c|}{$\epsilon=0.01$} & \multicolumn{3}{c|}{$\epsilon=0.05$} & \multicolumn{3}{c|}{$\epsilon=0.1$} & \multicolumn{3}{c|}{$\epsilon=0.15$} & \multicolumn{3}{c}{$\epsilon=0.2$} \\
 \hline
 \hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}& ip           &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$        & $-$*        \\
-& ip\_m        & $+$*       &            & $-$*       & $+$*       &            & $-$*       & $+$*       &            & $-$*       & $+$*       &            & $-$*       & $+$        &            & $-$*        \\
-& m            & $+$*       & $+$*       &            & $+$*       & $+$*       &            & $+$*       & $+$*       &            & $+$*       & $+$*       &            & $+$*       & $+$*       &             \\
+\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$        & $-$*        \\
+&ip\_m        & $+$*       &            & $-$*       & $+$*       &            & $-$*       & $+$*       &            & $-$*       & $+$*       &            & $-$*       & $+$        &            & $-$*        \\
+&m            & $+$*       & $+$*       &            & $+$*       & $+$*       &            & $+$*       & $+$*       &            & $+$*       & $+$*       &            & $+$*       & $+$*       &             \\
 \hline
 \multicolumn{2}{l|}{\textbf{SVM}} & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
 \hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}& ip           &            & $-$        & $+$*       &            & $-$        & $+$*       &            & $-$        & $+$*       &            & $-$        & $+$*       &            & $-$        & $+$*        \\
+\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            & $-$        & $+$*       &            & $-$        & $+$*       &            & $-$        & $+$*       &            & $-$        & $+$*       &            & $-$        & $+$*        \\
 &ip\_m        & $+$        &            & $+$*       & $+$        &            & $+$*       & $+$        &            & $+$*       & $+$        &            & $+$*       & $+$        &            & $+$*        \\
-& m            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &             \\
+&m            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &             \\
 \hline
 \hline
 \multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            & $-$        & $-$        &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$        & $-$*        \\
@@ -136,14 +136,15 @@
 \hline
 \multicolumn{2}{l|}{\textbf{RF}}  & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
 \hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            & $+$        & $+$*       &            & $-$        & $+$*       &            & $-$        & $+$*       &            & $-$        & $+$*       &            & $-$        & $+$*        \\
-&ip\_m        & $-$        &            & $+$*       & $+$        &            & $+$*       & $+$        &            & $+$*       & $+$        &            & $+$*       & $+$        &            & $+$*        \\
+\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            & $-$        & $+$*       &            & $-$        & $+$*       &            & $-$        & $+$*       &            & $-$        & $+$*       &            & $-$        & $+$*        \\
+&ip\_m        & $+$        &            & $+$*       & $+$        &            & $+$*       & $+$        &            & $+$*       & $+$        &            & $+$*       & $+$        &            & $+$*        \\
 &m            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &             \\
 \hline
 \hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            &            &            &            & $-$        & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*        \\
-&ip\_m        &            &            &            & $+$        &            & $-$        & $+$*       &            & $-$        & $+$*       &            & $-$*       & $+$*       &            & $-$*        \\
-&m            &            &            &            & $+$*       & $+$        &            & $+$*       & $+$        &            & $+$*       & $+$*       &            & $+$*       & $+$*       &             \\
+\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            &            &            &            & $-$        & $-$        &            & $-$        & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*        \\
+&ip\_m        &            &            &            & $+$        &            & $-$        & $+$        &            & $-$*       & $+$*       &            & $-$*       & $+$*       &            & $-$*        \\
+&m            &            &            &            & $+$        & $+$        &            & $+$*       & $+$*       &            & $+$*       & $+$*       &            & $+$*       & $+$*       &             \\
+
 \hline
 \multicolumn{2}{l|}{\textbf{QDA}} & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
 \hline
