--- a/paper/sample-papers/plots/iris-baseline-error.tex
+++ b/paper/sample-papers/plots/iris-baseline-error.tex
@@ -21,6 +21,9 @@ y grid style={white!69.0196078431373!black},
 ymajorgrids,
 ymin=0, ymax=0.0616,
 ytick style={color=black},
+ytick={0,.02,.04,.06},
+yticklabels = {.00,.02,.04,.06},
+scaled y ticks = false,
 height=4.cm,
 width=7cm,
 ]
