--- a/paper/sample-papers/plots/iris-oneC-0.tex
+++ b/paper/sample-papers/plots/iris-oneC-0.tex
@@ -10,8 +10,8 @@ legend style={
   fill opacity=0.8,
   draw opacity=1,
   text opacity=1,
-  at={(0.03,0.97)},
-  anchor=north west,
+  at={(0.6,0.05)},
+  anchor=south west,
   draw=white!80!black
 },
 tick align=outside,
@@ -27,6 +27,8 @@ y grid style={white!69.0196078431373!black},
 ymajorgrids,
 ymin=-0.045, ymax=1.067,
 ytick style={color=black},
+ytick={.0,.2,.4,.6,.8,1.},
+yticklabels = {.0,.2,.4,.6,.8,1.},
 height=4.3cm,
 width=7cm,
 ]
