--- a/paper/sample-papers/plots/wine_Red-baseline-error.tex
+++ b/paper/sample-papers/plots/wine_Red-baseline-error.tex
@@ -21,6 +21,8 @@ y grid style={white!69.0196078431373!black},
 ymajorgrids,
 ymin=0, ymax=0.519862264150943,
 ytick style={color=black},
+ytick={0,.2,.4},
+yticklabels = {.00,.20,.40},
 height=4.cm,
 width=7cm,
 ]
