--- a/paper/sample-papers/plots/wine_Red-dist-class.tex
+++ b/paper/sample-papers/plots/wine_Red-dist-class.tex
@@ -9,6 +9,8 @@ x grid style={white!69.0196078431373!black},
 xmajorgrids,
 xmin=2.31, xmax=8.69,
 xtick style={color=black},
+xtick={3,4,5,6,7,8},
+xticklabels = {1,2,3,4,5,6},
 y grid style={white!69.0196078431373!black},
 ymajorgrids,
 ymin=0, ymax=715.05,
@@ -22,6 +24,14 @@ width=7cm,
 \draw[draw=none,fill=white!50.1960784313725!black] (axis cs:5.6,0) rectangle (axis cs:6.4,638);
 \draw[draw=none,fill=white!50.1960784313725!black] (axis cs:6.6,0) rectangle (axis cs:7.4,199);
 \draw[draw=none,fill=white!50.1960784313725!black] (axis cs:7.6,0) rectangle (axis cs:8.4,18);
+
+\node[draw=none,align=center] at (axis cs:3,50) {10};
+\node[draw=none,align=center] at (axis cs:4,103) {53};
+\node[draw=none,align=center] at (axis cs:5,630) {681};
+\node[draw=none,align=center] at (axis cs:6,588) {638};
+\node[draw=none,align=center] at (axis cs:7,149) {199};
+\node[draw=none,align=center] at (axis cs:8,58) {18};
+
 \end{axis}
 
 \end{tikzpicture}
