--- a/paper/sample-papers/plots/wine_Red-oneC-0.tex
+++ b/paper/sample-papers/plots/wine_Red-oneC-0.tex
@@ -20,6 +20,8 @@ y grid style={white!69.0196078431373!black},
 ymajorgrids,
 ymin=-0.045, ymax=0.601246855345912,
 ytick style={color=black},
+ytick={.0,.2,.4,.6},
+yticklabels = {.0,.2,.4,.6},
 height=4.3cm,
 width=7cm,
 ]
