--- a/paper/sample-papers/plots/wine_White-oneC-0.tex
+++ b/paper/sample-papers/plots/wine_White-oneC-0.tex
@@ -27,6 +27,8 @@ y grid style={white!69.0196078431373!black},
 ymajorgrids,
 ymin=-0.045, ymax=0.355673168283707,
 ytick style={color=black},
+ytick={.0,.1,.2,.3},
+yticklabels = {.0,.1,.2,.3},
 height=4.3cm,
 width=7cm,
 ]
