--- a/paper/sample-papers/plots/yeast-avgC-2.tex
+++ b/paper/sample-papers/plots/yeast-avgC-2.tex
@@ -19,6 +19,8 @@ y grid style={white!69.0196078431373!black},
 ymajorgrids,
 ymin=-0.045, ymax=10.835,
 ytick style={color=black},
+ytick={0,2,4,6,8,10},
+yticklabels = {0,2,4,6,8,10},
 height=4.3cm,
 width=7cm,
 ]
