--- a/paper/sample-papers/sections/04-05-user.tex
+++ b/paper/sample-papers/sections/04-05-user.tex
@@ -1,5 +1,7 @@
 \subsection{user}
 
+Results for \textit{user} dataset are presented in \cref{fig:user} and in \cref{tab:user}.
+
 \begin{figure}[htbp]
 \floatconts
   {fig:user}
@@ -10,40 +12,40 @@
     \includeteximage{plots/user-dist-class}
     }%
     \qquad
-    \subfigure[Baseline error]{\label{fig:square}%
+    \subfigure[Baseline error, $b\_err$]{\label{fig:user:baseline-error}%
       \includeteximage{plots/user-baseline-error}
       }
     \qquad
-    \subfigure[$oneC$: SVM and DT]{\label{fig:square}%
+    \subfigure[$oneC$: SVM and DT]{\label{fig:user:oneC-SVM-DT}%
       \includeteximage{plots/user-oneC-0}
       %\includeteximage{plots/user-dist-class}
       }
     \qquad
-    \subfigure[$avgC$: SVM and DT]{\label{fig:square}%
+    \subfigure[$avgC$: SVM and DT]{\label{fig:user:avgC-SVM-DT}%
       \includeteximage{plots/user-avgC-0}
       }
     \qquad
-    \subfigure[$oneC$: KNN and Ada]{\label{fig:square}%
+    \subfigure[$oneC$: KNN and Ada]{\label{fig:user:oneC-KNN-Ada}%
       \includeteximage{plots/user-oneC-2}
       }
     \qquad
-    \subfigure[$avgC$: KNN and Ada]{\label{fig:square}%
+    \subfigure[$avgC$: KNN and Ada]{\label{fig:user:avgC-KNN-Ada}%
       \includeteximage{plots/user-avgC-2}
       }
     \qquad
-    \subfigure[$oneC$: GNB and MPR]{\label{fig:square}%
+    \subfigure[$oneC$: GNB and MPR]{\label{fig:user:oneC-GNB-MPR}%
       \includeteximage{plots/user-oneC-4}
       }
     \qquad
-    \subfigure[$avgC$: GNB and MPR]{\label{fig:square}%
+    \subfigure[$avgC$: GNB and MPR]{\label{fig:user:avgC-GNB-MPR}%
       \includeteximage{plots/user-avgC-4}
       }
     \qquad
-    \subfigure[$oneC$: RF and QDA]{\label{fig:square}%
+    \subfigure[$oneC$: RF and QDA]{\label{fig:user:oneC-RF-QDA}%
       \includeteximage{plots/user-oneC-6}
       }
     \qquad
-    \subfigure[$avgC$: RF and QDA]{\label{fig:square}%
+    \subfigure[$avgC$: RF and QDA]{\label{fig:user:avgC-RF-QDA}%
       \includeteximage{plots/user-avgC-6}
       }
   }
@@ -56,7 +58,7 @@
  % The caption goes in the second argument, and the table contents
  % go in the third argument.
 \floatconts
-  {tab:user-results}%
+  {tab:user}%
   {\caption{user dataset}}%
   {
 \begin{tabular}{cl|lll|lll|lll|lll|lll}
