--- a/paper/sample-papers/sections/04-09-yeast.tex
+++ b/paper/sample-papers/sections/04-09-yeast.tex
@@ -1,5 +1,9 @@
 \subsection{yeast}
 
+
+
+
+
 \begin{figure}[htbp]
 \floatconts
   {fig:yeast}
@@ -10,40 +14,40 @@
     \includeteximage{plots/yeast-dist-class}
     }%
     \qquad
-    \subfigure[Baseline error]{\label{fig:square}%
+    \subfigure[Baseline error, $b\_err$]{\label{fig:yeast:baseline-error}%
       \includeteximage{plots/yeast-baseline-error}
       }
     \qquad
-    \subfigure[$oneC$: SVM and DT]{\label{fig:square}%
+    \subfigure[$oneC$: SVM and DT]{\label{fig:yeast:oneC-SVM-DT}%
       \includeteximage{plots/yeast-oneC-0}
       %\includeteximage{plots/yeast-dist-class}
       }
     \qquad
-    \subfigure[$avgC$: SVM and DT]{\label{fig:square}%
+    \subfigure[$avgC$: SVM and DT]{\label{fig:yeast:avgC-SVM-DT}%
       \includeteximage{plots/yeast-avgC-0}
       }
     \qquad
-    \subfigure[$oneC$: KNN and Ada]{\label{fig:square}%
+    \subfigure[$oneC$: KNN and Ada]{\label{fig:yeast:oneC-KNN-Ada}%
       \includeteximage{plots/yeast-oneC-2}
       }
     \qquad
-    \subfigure[$avgC$: KNN and Ada]{\label{fig:square}%
+    \subfigure[$avgC$: KNN and Ada]{\label{fig:yeast:avgC-KNN-Ada}%
       \includeteximage{plots/yeast-avgC-2}
       }
     \qquad
-    \subfigure[$oneC$: GNB and MPR]{\label{fig:square}%
+    \subfigure[$oneC$: GNB and MPR]{\label{fig:yeast:oneC-GNB-MPR}%
       \includeteximage{plots/yeast-oneC-4}
       }
     \qquad
-    \subfigure[$avgC$: GNB and MPR]{\label{fig:square}%
+    \subfigure[$avgC$: GNB and MPR]{\label{fig:yeast:avgC-GNB-MPR}%
       \includeteximage{plots/yeast-avgC-4}
       }
     \qquad
-    \subfigure[$oneC$: RF and QDA]{\label{fig:square}%
+    \subfigure[$oneC$: RF and QDA]{\label{fig:yeast:oneC-RF-QDA}%
       \includeteximage{plots/yeast-oneC-6}
       }
     \qquad
-    \subfigure[$avgC$: RF and QDA]{\label{fig:square}%
+    \subfigure[$avgC$: RF and QDA]{\label{fig:yeast:avgC-RF-QDA}%
       \includeteximage{plots/yeast-avgC-6}
       }
   }
