--- a/paper/sample-papers/sections/04-experiments.tex
+++ b/paper/sample-papers/sections/04-experiments.tex
@@ -1,13 +1,31 @@
 \section{Experimental results}
 \label{sec:experiments}
 
-\input{sections/04-01-balance}
-\input{sections/04-03-glass}
+General overview of results: 
+\begin{itemize}
+    \item results are not distinguishable visually: iris and user
+    \begin{itemize}
+        \item iris - no statistical significance
+        \item user - not many cases with statistical significance
+    \end{itemize}
+    \item the difference is visible, but not very big: glass, cars, wave
+    \item difference is clearly visible: balance, wineR, wineW, yeast
+\end{itemize}
+
+
+\input{sections/04-04-iris}
 \input{sections/04-05-user}
+
+
+\input{sections/04-03-glass}
+\input{sections/04-02-cars}
+\input{sections/04-06-wave}
+
+
+\input{sections/04-01-balance}
 \input{sections/04-07-wineR}
 \input{sections/04-08-wineW}
 \input{sections/04-09-yeast}
 
-\input{sections/04-02-cars}
-\input{sections/04-04-iris}
-\input{sections/04-06-wave}
+
+
