--- a/paper/sample-papers/plots/cars-baseline-error.tex
+++ b/paper/sample-papers/plots/cars-baseline-error.tex
@@ -21,6 +21,8 @@ y grid style={white!69.0196078431373!black},
 ymajorgrids,
 ymin=0, ymax=1.01050370145016,
 ytick style={color=black},
+ytick={0,.2,.4,.6,.8,1},
+yticklabels = {.00,.20,.40,.60,.80,1.0},
 height=4.cm,
 width=7cm,
 ]
