--- a/paper/sample-papers/plots/iris-oneC-4.tex
+++ b/paper/sample-papers/plots/iris-oneC-4.tex
@@ -5,7 +5,9 @@
 
 \begin{axis}[
 legend cell align={left},
-legend style={fill opacity=0.8, draw opacity=1, text opacity=1, draw=white!80!black},
+legend style={fill opacity=0.8, draw opacity=1, text opacity=1, draw=white!80!black,
+at={(0.6,0.05)},
+  anchor=south west,},
 tick align=outside,
 tick pos=left,
 x grid style={white!69.0196078431373!black},
@@ -19,6 +21,8 @@ y grid style={white!69.0196078431373!black},
 ymajorgrids,
 ymin=-0.045, ymax=1.067,
 ytick style={color=black},
+ytick={.0,.2,.4,.6,.8,1.},
+yticklabels = {.0,.2,.4,.6,.8,1.},
 height=4.3cm,
 width=7cm,
 ]
