--- a/paper/sample-papers/plots/iris-oneC-6.tex
+++ b/paper/sample-papers/plots/iris-oneC-6.tex
@@ -7,8 +7,8 @@ legend style={
   fill opacity=0.8,
   draw opacity=1,
   text opacity=1,
-  at={(0.03,0.97)},
-  anchor=north west,
+  at={(0.6,0.05)},
+  anchor=south west,
   draw=white!80!black
 },
 tick align=outside,
@@ -19,11 +19,14 @@ xmin=0.000499999999999999, xmax=0.2095,
 xtick style={color=black},
 xtick={.01,.03,.05,.1,.15,.2},
 xticklabels = {.01,.03,.05,.1,.15,.2},
+xlabel = {$\epsilon$},
 %xticklabels = {,,,,,},
 y grid style={white!69.0196078431373!black},
 ymajorgrids,
 ymin=-0.045, ymax=1.067,
 ytick style={color=black},
+ytick={.0,.2,.4,.6,.8,1.},
+yticklabels = {.0,.2,.4,.6,.8,1.},
 height=4.3cm,
 width=7cm,
 ]
