--- a/paper/sample-papers/plots/user-avgC-6.tex
+++ b/paper/sample-papers/plots/user-avgC-6.tex
@@ -12,6 +12,7 @@ xmin=0.000499999999999999, xmax=0.2095,
 xtick style={color=black},
 xtick={.01,.03,.05,.1,.15,.2},
 xticklabels = {.01,.03,.05,.1,.15,.2},
+xlabel = {$\epsilon$},
 %xticklabels = {,,,,,},
 y grid style={white!69.0196078431373!black},
 ymajorgrids,
