--- a/paper/sample-papers/plots/user-oneC-0.tex
+++ b/paper/sample-papers/plots/user-oneC-0.tex
@@ -27,6 +27,8 @@ y grid style={white!69.0196078431373!black},
 ymajorgrids,
 ymin=-0.045, ymax=1.05545,
 ytick style={color=black},
+ytick={.0,.2,.4,.6,.8,1.},
+yticklabels = {.0,.2,.4,.6,.8,1.},
 height=4.3cm,
 width=7cm,
 ]
