--- a/paper/sample-papers/plots/user-oneC-6.tex
+++ b/paper/sample-papers/plots/user-oneC-6.tex
@@ -19,11 +19,14 @@ xmin=0.000499999999999999, xmax=0.2095,
 xtick style={color=black},
 xtick={.01,.03,.05,.1,.15,.2},
 xticklabels = {.01,.03,.05,.1,.15,.2},
+xlabel = {$\epsilon$},
 %xticklabels = {,,,,,},
 y grid style={white!69.0196078431373!black},
 ymajorgrids,
 ymin=-0.045, ymax=1.05545,
 ytick style={color=black},
+ytick={.0,.2,.4,.6,.8,1.},
+yticklabels = {.0,.2,.4,.6,.8,1.},
 height=4.3cm,
 width=7cm,
 ]
