--- a/paper/sample-papers/plots/wave-baseline-error.tex
+++ b/paper/sample-papers/plots/wave-baseline-error.tex
@@ -21,6 +21,8 @@ y grid style={white!69.0196078431373!black},
 ymajorgrids,
 ymin=0, ymax=0.26544,
 ytick style={color=black},
+ytick={0,.1,.2},
+yticklabels = {.00,.10,.20},
 height=4.cm,
 width=7cm,
 ]
