--- a/paper/sample-papers/plots/wine_Red-avgC-0.tex
+++ b/paper/sample-papers/plots/wine_Red-avgC-0.tex
@@ -20,6 +20,8 @@ y grid style={white!69.0196078431373!black},
 ymajorgrids,
 ymin=-0.045, ymax=6.38,
 ytick style={color=black},
+ytick={0,1,2,3,4,5,6},
+yticklabels = {0,1,2,3,4,5,6},
 height=4.3cm,
 width=7cm,
 ]
