--- a/paper/sample-papers/plots/wine_White-avgC-4.tex
+++ b/paper/sample-papers/plots/wine_White-avgC-4.tex
@@ -19,6 +19,8 @@ y grid style={white!69.0196078431373!black},
 ymajorgrids,
 ymin=-0.045, ymax=7.227,
 ytick style={color=black},
+ytick={0,1,2,3,4,5,6,7},
+yticklabels = {0,1,2,3,4,5,6,7},
 height=4.3cm,
 width=7cm,
 ]
