--- a/paper/sample-papers/plots/yeast-oneC-2.tex
+++ b/paper/sample-papers/plots/yeast-oneC-2.tex
@@ -19,6 +19,8 @@ y grid style={white!69.0196078431373!black},
 ymajorgrids,
 ymin=-0.045, ymax=0.535432432432432,
 ytick style={color=black},
+ytick={.0,.1,.2,.3,.4,.5},
+yticklabels = {.0,.1,.2,.3,.4,.5},
 height=4.3cm,
 width=7cm,
 ]
