--- a/paper/sample-papers/sections/04-02-cars.tex
+++ b/paper/sample-papers/sections/04-02-cars.tex
@@ -1,5 +1,8 @@
 \subsection{cars}
 
+
+
+
 \begin{figure}[htbp]
 \floatconts
   {fig:cars}
@@ -10,40 +13,40 @@
     \includeteximage{plots/cars-dist-class}
     }%
     \qquad
-    \subfigure[Baseline error]{\label{fig:square}%
+    \subfigure[Baseline error, $b\_err$]{\label{fig:cars:baseline-error}%
       \includeteximage{plots/cars-baseline-error}
       }
     \qquad
-    \subfigure[$oneC$: SVM and DT]{\label{fig:square}%
+    \subfigure[$oneC$: SVM and DT]{\label{fig:cars:oneC-SVM-DT}%
       \includeteximage{plots/cars-oneC-0}
       %\includeteximage{plots/cars-dist-class}
       }
     \qquad
-    \subfigure[$avgC$: SVM and DT]{\label{fig:square}%
+    \subfigure[$avgC$: SVM and DT]{\label{fig:cars:avgC-SVM-DT}%
       \includeteximage{plots/cars-avgC-0}
       }
     \qquad
-    \subfigure[$oneC$: KNN and Ada]{\label{fig:square}%
+    \subfigure[$oneC$: KNN and Ada]{\label{fig:cars:oneC-KNN-Ada}%
       \includeteximage{plots/cars-oneC-2}
       }
     \qquad
-    \subfigure[$avgC$: KNN and Ada]{\label{fig:square}%
+    \subfigure[$avgC$: KNN and Ada]{\label{fig:cars:avgC-KNN-Ada}%
       \includeteximage{plots/cars-avgC-2}
       }
     \qquad
-    \subfigure[$oneC$: GNB and MPR]{\label{fig:square}%
+    \subfigure[$oneC$: GNB and MPR]{\label{fig:cars:oneC-GNB-MPR}%
       \includeteximage{plots/cars-oneC-4}
       }
     \qquad
-    \subfigure[$avgC$: GNB and MPR]{\label{fig:square}%
+    \subfigure[$avgC$: GNB and MPR]{\label{fig:cars:avgC-GNB-MPR}%
       \includeteximage{plots/cars-avgC-4}
       }
     \qquad
-    \subfigure[$oneC$: RF and QDA]{\label{fig:square}%
+    \subfigure[$oneC$: RF and QDA]{\label{fig:cars:oneC-RF-QDA}%
       \includeteximage{plots/cars-oneC-6}
       }
     \qquad
-    \subfigure[$avgC$: RF and QDA]{\label{fig:square}%
+    \subfigure[$avgC$: RF and QDA]{\label{fig:cars:avgC-RF-QDA}%
       \includeteximage{plots/cars-avgC-6}
       }
   }
