--- a/paper/sample-papers/sections/04-03-glass.tex
+++ b/paper/sample-papers/sections/04-03-glass.tex
@@ -1,5 +1,10 @@
 \subsection{glass}
 
+
+
+
+
+
 \begin{figure}[htbp]
 \floatconts
   {fig:glass}
@@ -10,40 +15,40 @@
     \includeteximage{plots/glass-dist-class}
     }%
     \qquad
-    \subfigure[Baseline error]{\label{fig:square}%
+    \subfigure[Baseline error, $b\_err$]{\label{fig:glass:baseline-error}%
       \includeteximage{plots/glass-baseline-error}
       }
     \qquad
-    \subfigure[$oneC$: SVM and DT]{\label{fig:square}%
+    \subfigure[$oneC$: SVM and DT]{\label{fig:glass:oneC-SVM-DT}%
       \includeteximage{plots/glass-oneC-0}
       %\includeteximage{plots/glass-dist-class}
       }
     \qquad
-    \subfigure[$avgC$: SVM and DT]{\label{fig:square}%
+    \subfigure[$avgC$: SVM and DT]{\label{fig:glass:avgC-SVM-DT}%
       \includeteximage{plots/glass-avgC-0}
       }
     \qquad
-    \subfigure[$oneC$: KNN and Ada]{\label{fig:square}%
+    \subfigure[$oneC$: KNN and Ada]{\label{fig:glass:oneC-KNN-Ada}%
       \includeteximage{plots/glass-oneC-2}
       }
     \qquad
-    \subfigure[$avgC$: KNN and Ada]{\label{fig:square}%
+    \subfigure[$avgC$: KNN and Ada]{\label{fig:glass:avgC-KNN-Ada}%
       \includeteximage{plots/glass-avgC-2}
       }
     \qquad
-    \subfigure[$oneC$: GNB and MPR]{\label{fig:square}%
+    \subfigure[$oneC$: GNB and MPR]{\label{fig:glass:oneC-GNB-MPR}%
       \includeteximage{plots/glass-oneC-4}
       }
     \qquad
-    \subfigure[$avgC$: GNB and MPR]{\label{fig:square}%
+    \subfigure[$avgC$: GNB and MPR]{\label{fig:glass:avgC-GNB-MPR}%
       \includeteximage{plots/glass-avgC-4}
       }
     \qquad
-    \subfigure[$oneC$: RF and QDA]{\label{fig:square}%
+    \subfigure[$oneC$: RF and QDA]{\label{fig:glass:oneC-RF-QDA}%
       \includeteximage{plots/glass-oneC-6}
       }
     \qquad
-    \subfigure[$avgC$: RF and QDA]{\label{fig:square}%
+    \subfigure[$avgC$: RF and QDA]{\label{fig:glass:avgC-RF-QDA}%
       \includeteximage{plots/glass-avgC-6}
       }
   }
