--- a/paper/sample-papers/sections/04-07-wineR.tex
+++ b/paper/sample-papers/sections/04-07-wineR.tex
@@ -1,49 +1,52 @@
-\subsection{wineRed}
+\subsection{wineRed}\footnote{\textcolor{red}{Check classes. Why do we have 8 classes here?}}
+
+
+
 
 \begin{figure}[htbp]
 \floatconts
   {fig:wineRed}
-  {\caption{Results for \textit{wineRed} dataset.}}
+  {\caption{Results for \textit{wineRed} dataset}}
   {%
     \subfigure[Distribution between classes]{
     \label{fig:wineRed:dist-class}%
     \includeteximage{plots/wine_Red-dist-class}
     }%
     \qquad
-    \subfigure[Baseline error]{\label{fig:square}%
+    \subfigure[Baseline error, $b\_err$]{\label{fig:wineRed:baseline-error}%
       \includeteximage{plots/wine_Red-baseline-error}
       }
     \qquad
-    \subfigure[$oneC$: SVM and DT]{\label{fig:square}%
+    \subfigure[$oneC$: SVM and DT]{\label{fig:wineRed:oneC-SVM-DT}%
       \includeteximage{plots/wine_Red-oneC-0}
       %\includeteximage{plots/wine_Red-dist-class}
       }
     \qquad
-    \subfigure[$avgC$: SVM and DT]{\label{fig:square}%
+    \subfigure[$avgC$: SVM and DT]{\label{fig:wineRed:avgC-SVM-DT}%
       \includeteximage{plots/wine_Red-avgC-0}
       }
     \qquad
-    \subfigure[$oneC$: KNN and Ada]{\label{fig:square}%
+    \subfigure[$oneC$: KNN and Ada]{\label{fig:wineRed:oneC-KNN-Ada}%
       \includeteximage{plots/wine_Red-oneC-2}
       }
     \qquad
-    \subfigure[$avgC$: KNN and Ada]{\label{fig:square}%
+    \subfigure[$avgC$: KNN and Ada]{\label{fig:wineRed:avgC-KNN-Ada}%
       \includeteximage{plots/wine_Red-avgC-2}
       }
     \qquad
-    \subfigure[$oneC$: GNB and MPR]{\label{fig:square}%
+    \subfigure[$oneC$: GNB and MPR]{\label{fig:wineRed:oneC-GNB-MPR}%
       \includeteximage{plots/wine_Red-oneC-4}
       }
     \qquad
-    \subfigure[$avgC$: GNB and MPR]{\label{fig:square}%
+    \subfigure[$avgC$: GNB and MPR]{\label{fig:wineRed:avgC-GNB-MPR}%
       \includeteximage{plots/wine_Red-avgC-4}
       }
     \qquad
-    \subfigure[$oneC$: RF and QDA]{\label{fig:square}%
+    \subfigure[$oneC$: RF and QDA]{\label{fig:wineRed:oneC-RF-QDA}%
       \includeteximage{plots/wine_Red-oneC-6}
       }
     \qquad
-    \subfigure[$avgC$: RF and QDA]{\label{fig:square}%
+    \subfigure[$avgC$: RF and QDA]{\label{fig:wineRed:avgC-RF-QDA}%
       \includeteximage{plots/wine_Red-avgC-6}
       }
   }
